chore: update environment variables and add MinIO and pgAdmin services to Docker Compose

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ POSTGRES_PORT=5432
 MINIO_ROOT_USER=change-me
 MINIO_ROOT_PASSWORD=change-me
 MINIO_ENDPOINT=http://minio:9000
+
+PGADMIN_DEFAULT_EMAIL=change-me@example.com
+PGADMIN_DEFAULT_PASSWORD=change-me
